--- a/index.html
+++ b/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Todolist</title>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css' integrity='sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==' crossorigin='anonymous' referrerpolicy='no-referrer' />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'
+        integrity='sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=='
+        crossorigin='anonymous' referrerpolicy='no-referrer' />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
 
     <div id="app">
+        <div class="container">
 
-        
+            <header>
+                <img width="300" src="./assets/img/logo.png" alt="">
+            </header>
+            <main>
+                <div class="add_todo">
+                    <form action="#" method="get">
+                        <input type="text" placeholder="Nuovo Todo" required>
+                        <button type="submit">Aggiungi</button>
+                    </form>
+                </div>
+                <div class="list_todo">
+                    <ul>
+                        <li v-for="todo in todos" :class="todo.done === true ? 'text_style' : ''">
+                            {{todo.text}}
+                        </li>
+                    </ul>
+                </div>
+            </main>
+
+        </div>
 
 
     </div>
@@ -23,4 +47,5 @@
     <script src='https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js'></script>
     <script src="./assets/js/app.js"></script>
 </body>
+
 </html>
