--- a/bonus/index.html
+++ b/bonus/index.html
@@ -32,7 +32,7 @@
                 <div class="list_todo">
                     <ul v-if="todos.length > 0">
                         <li v-for="(todo, index) in todos">
-                          <div :class="todo.done === true ? 'text_style' : ''" >{{todo.text}}</div>   
+                          <div :class="todo.done === true ? 'text_style' : ''" @click="change_done(index)" >{{todo.text}}</div>   
                           <i @click="delete_todo(index)" class="fa-solid fa-times-circle"></i>
                         </li>
                     </ul>
