add array di recupero perchè l'utente ha sbagliato a cestinare

--- a/versione-alternativa/index.html
+++ b/versione-alternativa/index.html
@@ -79,6 +79,12 @@
 
                     </div>
 
+                    <div v-if="todos_invisible.length > 0" class="recupero">
+                        <a href="#" @click="recupera">
+                            Cliccami per recuperare i todo appena eliminati
+                        </a>
+                    </div>
+
                 </div>
             </main>
 
